--- a/figma design/index.html
+++ b/figma design/index.html
@@ -13,7 +13,7 @@
     <header>
 
         
-        <img src="/figma design/Logo.png" alt="">
+        <img src="figma design/Logo.png" alt="">
         <div class="content1">
             <ul>
                 <li>
@@ -69,13 +69,13 @@
     </nav>
 
     <nav class="clientlogo">
-        <img src="/figma Photos/Logo (1).png" alt="">
-        <img src="/figma Photos/Logo (2).png" alt="">
-        <img src="/figma Photos/Logo (3).png" alt="">
-        <img src="/figma Photos/Logo (4).png" alt="">
-        <img src="/figma Photos/Logo (5).png" alt="">
-        <img src="/figma Photos/Logo (6).png" alt="">
-        <img src="/figma Photos/Logo (7).png" alt="">
+        <img src="figma Photos/Logo (1).png" alt="">
+        <img src="figma Photos/Logo (2).png" alt="">
+        <img src="figma Photos/Logo (3).png" alt="">
+        <img src="figma Photos/Logo (4).png" alt="">
+        <img src="figma Photos/Logo (5).png" alt="">
+        <img src="figma Photos/Logo (6).png" alt="">
+        <img src="figma Photos/Logo (7).png" alt="">
     </nav>
     <nav class="manage">
         <h2>Manage your entire community <br>in a single system</h2>
