--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header class="header">
         <div>
-            <img src="/file/sanito-logo.png" alt="" class="jjj">
+            <img src="file/sanito-logo.png" alt="" class="jjj">
         </div>
         <ul>
             <li>Home Page</li>
@@ -116,21 +116,21 @@
     <div class="Edca">
 
         <div class="topicv">
-            <img src="/file/alarm.webp" alt="">
+            <img src="file/alarm.webp" alt="">
             <p>
                 At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum
                 deleniti atque corrupti
             </p>
         </div>
         <div class="topicv">
-            <img src="/file/signatures_pen_.webp" alt="">
+            <img src="file/signatures_pen_.webp" alt="">
             <p>
                 At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum
                 deleniti atque corrupti
             </p>
         </div>
         <div class="topicv">
-            <img src="/file/x1siqib7.png" alt="">
+            <img src="file/x1siqib7.png" alt="">
             <p>
                 At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum
                 deleniti atque corrupti
@@ -138,7 +138,7 @@
         </div>
         <div class="topicv">
 
-            <img src="/file/magnificient.jpg" alt="">
+            <img src="file/magnificient.jpg" alt="">
             <p>
                 At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum
                 deleniti atque corrupti
@@ -147,14 +147,14 @@
     </div>
     <footer class="footer">
         <div>
-            <img src="/file/sanito-logo.png" alt="" class="jjj2">
+            <img src="file/sanito-logo.png" alt="" class="jjj2">
         </div>
 
         <div class="footer2">
             <div class="faceInstagram">
-                <img src="/file/facebook logo.webp" alt="">
-                <img src="/file/instaram logo.jpg" alt="">
-                <img src="/file/IN logo.webp" alt="">
+                <img src="file/facebook logo.webp" alt="">
+                <img src="file/instaram logo.jpg" alt="">
+                <img src="file/IN logo.webp" alt="">
             </div>
             <h4 class="websitecre">
                 A website created in the WebWave builder.
